<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tag and Track</string>
    <string name="action_settings">Settings</string>
    <string name="addButton">Tag</string>
    <string name="search">Track</string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_database">Database</string>
    <string name="main_hint">Select action:</string>
    <string name="action_about">About</string>
    <string name="UID">UID: </string>
    <string name="species">Species: </string>
    <string name="description">Description: </string>
    <string name="additional">Tag number: </string>
    <string name="take_photo"></string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="help">Help</string>
    <string name="title_activity_details">Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map_zoom">MapZoom</string>
    <string name="delete">Delete</string>

</resources>