<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#424243"
    tools:context=".Details" >   

    <LinearLayout 
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        >
        
        <ImageView 
            android:id="@+id/details_photo"
            android:layout_gravity="center_vertical|center_horizontal"
        	android:layout_width="160dp"
        	android:layout_height="160dp"
        	android:contentDescription="@string/app_name"
        	/>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            >
            
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/UID"
                android:textColor="#91c8f4"
                android:textSize="20sp"
                />
            <TextView
             
		        android:id="@+id/details_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/UID"
		        android:textIsSelectable="false"
		        android:textSize="40sp"
		        android:textColor="#91c8f4" />
            
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/species"
                android:textColor="#91c8f4"
                android:textSize="20sp"
                />
            
            <TextView
             
		        android:id="@+id/details_species"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/UID"
		        android:textIsSelectable="false"
		        android:textSize="27sp"
		        android:textColor="#91c8f4" />
            
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout 
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="#91c8f4"
                android:textSize="20sp"
                />
        <TextView
             
		        android:id="@+id/details_description"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/UID"
		        android:textIsSelectable="false"
		        android:textSize="25sp"
		        android:textColor="#91c8f4" />
        
     </LinearLayout>
     
    <LinearLayout 
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/additional"
                android:textColor="#91c8f4"
                android:textSize="20sp"
                />
        <TextView
             
		        android:id="@+id/details_tagid"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/UID"
		        android:textIsSelectable="false"
		        android:textSize="25sp"
		        android:textColor="#91c8f4" />
        
     </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="0dp"
    	android:paddingLeft="0dp"
    	android:paddingRight="0dp"
    	android:id="@+id/map_layout"
    	android:clickable="true"
    	android:paddingTop="@dimen/activity_vertical_margin">
    
    <fragment 
        android:id="@+id/map"
        android:background="@drawable/photo_border"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:name="com.google.android.gms.maps.MapFragment"/>
	</LinearLayout>    

</LinearLayout>